--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A lightweight logger for your applications with rolling file support and much more.",
   "main": "index.js",
+  "private": false,
   "keywords": [
     "logger",
     "fast",
