--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@echocraft/echo-log",
+  "name": "@codingruo/echo-log",
   "version": "0.0.1",
   "description": "A lightweight logger for your applications with rolling file support and much more.",
   "main": "index.js",
